# KITKART

./: .gitignore  CMakeLists.txt  README.md  build.ps1  data.py  game  makefile
.cache/clangd/index/: BlendMode.hpp.7E9E8941D8E7515F.idx  CircleShape.hpp.27E1C96DB91E6681.idx  Clipboard.hpp.699089485815C351.idx  Clock.hpp.5095B6445636718F.idx  Color.hpp.56D5730EE8D72CF4.idx  Config.hpp.7BDB67F71E2EF98A.idx  Context.hpp.FD377D996E4287AD.idx  ContextSettings.hpp.43A384D3C6855A95.idx  ConvexShape.hpp.744AE89B2620AA05.idx  Cursor.hpp.F3772A7ED4CD8F88.idx  Drawable.hpp.3EB4F99F537A4E52.idx  Err.hpp.F1D2CC74CEB81A09.idx  Event.hpp.CBF813264239558D.idx  Export.hpp.47BF270A6F14352D.idx  Export.hpp.68B9F4E353B89B89.idx  Export.hpp.9360914EC61B3FC4.idx  FileInputStream.hpp.466F42E35C81900F.idx  Font.hpp.2A1800D5EA114B44.idx  GlResource.hpp.96862EA3F3FB90E9.idx  Glsl.hpp.C432551BAAF2312F.idx  Glsl.inl.A4BE7E9C996B8EFE.idx  Glyph.hpp.B99E296FBE5E71AA.idx  Graphics.hpp.A14481453C36FD59.idx  Image.hpp.422F7AA438E2B58D.idx  InputStream.hpp.241D1614D4ECDFA2.idx  Joystick.hpp.A1DECACD02C8D69F.idx  Keyboard.hpp.B376651F73D415C5.idx  Lock.hpp.34AC9AC610137BF2.idx  MemoryInputStream.hpp.B7AB3463A10D7F2C.idx  Mouse.hpp.0BE27AADEAA6BCF8.idx  Mutex.hpp.66B9C4A95611F7D6.idx  NonCopyable.hpp.539DC4AB04A7581D.idx  PrimitiveType.hpp.BD11CBC42B9CAC44.idx  Rect.hpp.EBAF90165734B990.idx  Rect.inl.9D22A8CB4139A51D.idx  (+42 more)
LIB/: car.cpp  car.h  lin_alg.cpp
SRC/: kart.cpp  kart.h  main.cpp
libkk/: car.cpp  car.h  lin_alg.cpp  lin_alg.h  track.cpp  track.h
test/: main.cpp  test.track
